--- a/data-emulator/package.json
+++ b/data-emulator/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/battery_emulator.ts",
+    "start": "npx ts-node src/battery_emulator.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,5 +13,9 @@
   "devDependencies": {
     "@types/node": "^18.13.0",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "net": "^1.0.2",
+    "process": "^0.11.10"
   }
 }
