--- a/streaming-service/package.json
+++ b/streaming-service/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "fs": "^0.0.1-security",
     "ws": "^8.12.1"
   },
   "devDependencies": {
@@ -12,7 +13,7 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "start": "ts-node src/server.ts",
+    "start": "npx ts-node src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
